crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-view_union_all_join-multi_text_column_megascience_additional_columns_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "question": "State the degree of the differential equation:\n$$\ny^{\\prime \\prime} = 6x + \\sin x\n$$"
      },
      "dataset": "qs",
      "matches": {
        "answer": "The degree of the differential equation is \\(\\boxed{2}\\), as the highest derivative present is the second derivative \\( y'' \\)."
      },
      "primary_key": {
        "id": 772
      },
      "score": 0.01
    },
    {
      "data": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "dataset": "qs",
      "matches": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "primary_key": {
        "id": 361
      },
      "score": 0.01
    },
    {
      "data": {
        "question": "In a group of 3 machines where 2 are faulty, what is the probability that the first two machines tested are both faulty?"
      },
      "dataset": "qs",
      "matches": {
        "answer": "\\[\nP(\\text{First faulty and second faulty}) = \\frac{2}{3} \\times \\frac{1}{2} = \\boxed{\\frac{1}{3}}\n\\]"
      },
      "primary_key": {
        "id": 525
      },
      "score": 0.01
    }
  ]
}
