crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-view_union_all_join-multi_text_column_megascience_vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
expression: resp
snapshot_kind: text
---
"HTTP error: 400 Bad Request - Failed to execute query: Error during planning: Table 'spice.public.qs' does not have an embedding index."
