crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-view_union_all_join-text_search_megascience_vector_search_sql_no_score_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer FROM vector_search(qs, 'second', answer) order by score desc, id LIMIT 4"
snapshot_kind: text
---
Could not prepare EXPLAIN plan. SQL error: "HTTP error: 400 Bad Request - Failed to execute query: Error during planning: Table 'spice.public.qs' does not have an embedding index."
