crates/runtime/tests/search/snapshots/integration_models__search__duckdb-no_vector_engine-view_union_all_join-text_search_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
snapshot_kind: text
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "qs",
      "matches": {
        "answer": "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
      },
      "primary_key": {
        "id": 890
      },
      "score": 7.52
    }
  ]
}
